<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.estebanposada.industrialp3.MainActivity"
    android:background="@color/darkslategray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:text="@string/title"
            android:textSize="25sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/whitesmoke"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_width="70sp"
                    android:layout_height="40sp"
                    android:text="@string/run"
                    android:layout_gravity="center"
                    android:id="@+id/run"/>
                <Button
                    android:layout_width="70sp"
                    android:layout_height="40sp"
                    android:text="@string/stop"
                    android:layout_gravity="center"
                    android:id="@+id/stop"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sel"
                    android:textAlignment="center"
                    android:textColor="@color/whitesmoke"/>
                <Spinner
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:layout_gravity="center">
                </Spinner>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/s1"
                        android:text="@string/sen1"
                        android:layout_marginRight="20sp"
                        android:onClick="sense"
                        android:checked="true"
                        android:textColor="@color/whitesmoke"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/s2"
                        android:text="@string/sen2"
                        android:layout_marginLeft="20sp"
                        android:onClick="sense"
                        android:textColor="@color/whitesmoke"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txbar"
                android:text="@string/freq"
                android:textColor="@color/whitesmoke"
                />
            <SeekBar
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:id="@+id/seekbar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/trama"
                android:id="@+id/trama"
                android:textColor="@color/whitesmoke"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColorHint="@color/whitesmoke"
                android:elegantTextHeight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/probe"
                android:textColor="@color/white"
                android:hint="@string/probe"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
